2005-02-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/lang/Float/compareTo.java,
	gnu/testlet/java/lang/Double/compareTo.java: New tests.
	
2005-02-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Date/after.java, 
	gnu/testlet/java/util/Date/before.java, 
	gnu/testlet/java/util/Date/clone.java, 
	gnu/testlet/java/util/Date/compareTo.java,
	gnu/testlet/java/util/Date/equals.java,
	gnu/testlet/java/util/Date/serialization.java: New tests.
	
2005-02-18  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/LinkedHashMap/LinkedHashMapTest: Fix tag typo.
	'JLS1.4' -> 'JDK1.4'.

2005-02-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/DateFormat.equals: New tests;
	* gnu/testlet/java/text/SimpleDateFormat.equals: Added new 
	check.
	
2005-02-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/GregorianCalendar/equals.java: New tests.
	
2005-02-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/font/TransformAttribute/constructor.java,
	gnu/testlet/java/awt/font/TransformAttribute/getTransform.java,
	gnu/testlet/java/awt/font/TransformAttribute/isIdentity.java,
	gnu/testlet/java/awt/font/TransformAttribute/serialization.java:
	New tests.
	
2005-02-18  Robert Schuster <thebohemian@gmx.net>

    * gnu/testlet/java/beans/XMLDecoder/jdk14.java: Added
    new subtest.
    * gnu/testlet/java/beans/XMLDecoder/DoubleArrayChecker.java: New
    file.
    * gnu/testlet/java/beans/XMLDecoder/DecoderTestHelper.java: Added
    constructor copying name argument to field.
    * gnu/testlet/java/beans/XMLDecoder/PointArrayChecker.java: Fixed
    equality check.
    * gnu/testlet/java/beans/XMLDecoder/data/GrowableDoubleArray.xml,
    gnu/testlet/java/beans/XMLDecoder/GrowableIntArray2.xml: New
    testdata.

2005-02-18  Robert Schuster <thebohemian@gmx.net>

    * gnu/testlet/java/nio/charset/Charset/forName.java: Added